fix(ui): align response description column (#8963)
Closes #7850

--- a/src/style/_table.scss
+++ b/src/style/_table.scss
@@ -101,7 +101,7 @@ table
         border-width: 1px;
     }
 
-    .markdown {
+    .markdown, .renderedMarkdown {
         p {
             margin: 0;
         }
@@ -187,7 +187,7 @@ table
 .response-col_description {
     width: 99%; // forces other columns to shrink to their content widths
 
-    .markdown {
+    .markdown, .renderedMarkdown {
         p {
             margin: 0;
         }
